examples/datalog/21_query_features/25_chain_computation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_chain_comp
Knowledge graph 'test_chain_comp' created.
Switched to knowledge graph: test_chain_comp
> .kg use test_chain_comp
Switched to knowledge graph: test_chain_comp
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> chained(X, A, B, C) :- base(X), A = X + 1, B = A * 2, C = B + 10.
Script error: Query execution failed: Unsafe rule: Atom { relation: "chained", args: [Variable("X"), Variable("A"), Variable("B"), Variable("C")] }. Variables ["A", "B", "C"] in head do not appear in positive body atoms.
